--- a/EXERCICIOS/ex-025/mq005/estilos/style.css
+++ b/EXERCICIOS/ex-025/mq005/estilos/style.css
@@ -20,8 +20,22 @@ header > h1 {
     text-align: center;
 }
 
-menu {
+#burguer {
+    background-color: rgb(58, 58, 58);
+    color: white;
     display: block;
+    text-align: center;
+    padding: 10px;
+    cursor: pointer;
+}
+
+#burguer:hover {
+    background-color: white;
+    color: rgb(58, 58, 58);
+}
+
+menu {
+    display: none;
 }
 
 menu > ul {
