Fim do menu burguer com JS

--- a/EXERCICIOS/ex-025/mq005/estilos/style.css
+++ b/EXERCICIOS/ex-025/mq005/estilos/style.css
@@ -20,7 +20,7 @@ header > h1 {
     text-align: center;
 }
 
-#burguer {
+span#burguer {
     background-color: rgb(58, 58, 58);
     color: rgb(255, 255, 255);
     display: block;
