Fim do site com flexbox

--- a/EXERCICIOS/ex-027/flex013 - menu flexbox/mobile.css
+++ b/EXERCICIOS/ex-027/flex013 - menu flexbox/mobile.css
@@ -1,5 +1,13 @@
 @charset "UTF-8";
 
-body {
-    background-color: brown;
+header, header > nav {
+    flex-flow: column nowrap;
+}
+
+header > h1 {
+    flex-basis: 50px;
+}
+
+header > nav > a {
+    width: 90vw;
 }
